--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     </div>
 </nav>
 <div class="box">
-   <div id="container" style="width: 500px;height:400px;"></div>
+    <div id="echart-normal" style="width: 400px;height:400px;"></div>
+    <div id="echart-axis" style="width: 400px;height:400px;"></div>
+    <div id="container2" style="width: 400px;height:400px"></div>
 </div>
 <div class="box">
 	<div class="c">
@@ -42,7 +44,7 @@
         <canvas id="Chart3" width="300" height="300"></canvas>
     </div>
 </div>
-<div class="box">
+<div class="box bottom-box">
 	<div class="c">
         <h1>chart-polarArea</h1>
         <canvas id="Chart4" width="300" height="300"></canvas>
@@ -58,11 +60,6 @@
     </div>
     <!-- shift + insert 粘贴 -->
 </div>
-<div class="box bottom-box">
-    <div id="main" style="width: 400px;height:400px;"></div>
-    
-    <div id="container2" style="width: 400px;height:400px"></div>
-</div>
 
 <footer class="trademark" id="trademark">
     <p>
@@ -74,10 +71,10 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-<script src="chart.js"></script>
+<script src="js/chart.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
-<script src="echarts.js"></script>
+<script src="js/echarts.js"></script>
 
 <script src="js/toggle.js"></script>
 </body>
