--- a/index.html
+++ b/index.html
@@ -27,36 +27,26 @@
 </nav>
 <div class="box">
     <div id="echart-normal" style="width: 400px;height:400px;"></div>
-    <div id="echart-axis" style="width: 400px;height:400px;"></div>
-    <div id="container2" style="width: 400px;height:400px"></div>
+    <!--南丁格尔图-->
+    <div id="echart-nightingale" style="width: 400px;height:400px"></div>
+    <div id="echart-reverse" style="width: 400px;height:400px"></div>
 </div>
 <div class="box">
-	<div class="c">
-        <h1>chart-line</h1>
-        <canvas id="Chart2" width="300" height="300"></canvas>
-    </div>
-    <div class="c">
-        <h1>chart-bar</h1>
-        <canvas id="myChart" width="300" height="300"></canvas>
-    </div>
-	<div class="c">
-        <h1>chart-radar</h1>
-        <canvas id="Chart3" width="300" height="300"></canvas>
-    </div>
+    <div id="echart-axis" style="width: 450px;height:400px;"></div>
+    <div id="echart-data" style="width: 450px;height:400px;"></div>
 </div>
 <div class="box bottom-box">
-	<div class="c">
+	<div>
+        <h1>chart-line</h1>
+        <canvas id="Chart2" width="400" height="400"></canvas>
+    </div>
+    <div>
+        <h1>chart-bar</h1>
+        <canvas id="myChart" width="400" height="400"></canvas>
+    </div>
+	<div>
         <h1>chart-polarArea</h1>
-        <canvas id="Chart4" width="300" height="300"></canvas>
-    </div>
-	<!-- Pie Doughnut -->
-	<div class="c">
-        <h1>chart-Pie</h1>
-        <canvas id="Chart5" width="300" height="300"></canvas>
-    </div>
-	<div class="c">
-        <h1>chart-Doughnut</h1>
-        <canvas id="Chart6" width="300" height="300"></canvas>
+        <canvas id="Chart4" width="400" height="400"></canvas>
     </div>
     <!-- shift + insert 粘贴 -->
 </div>
@@ -70,12 +60,11 @@
     <p><small>© 2021 Kart Jim, Inc.</small></p>
 </footer>
 
+<script src="js/toggle.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 <script src="js/chart.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
 <script src="js/echarts.js"></script>
-
-<script src="js/toggle.js"></script>
 </body>
 </html>
