--- a/index.html
+++ b/index.html
@@ -1,70 +1,91 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chart</title>
     <link rel="icon" href="asset//img/web-logo2.png">
-	<link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/toggle.css">
     <link rel="stylesheet" href="css/click.css">
-    
+    <link rel="stylesheet" href="css/highcharts.css">
+
 </head>
+
 <body class="color-white" id="bd">
-<nav id="nav">
-    <div class="navbox">
-        <h1 id="title">Marine Data</h1>
-        <div class="toggle">
-            <p id="lightenText" class="toggle-text">lighten</p>
-            <div id="toggleBtn" class="toggle-btn">
-                <div class="inner-circle"></div>
+    <nav id="nav">
+        <div class="navbox">
+            <h1 id="title">Marine Data</h1>
+            <div class="toggle">
+                <p id="lightenText" class="toggle-text">lighten</p>
+                <div id="toggleBtn" class="toggle-btn">
+                    <div class="inner-circle"></div>
+                </div>
+                <p id="darkenText" class="toggle-text unselected">darken</p>
             </div>
-            <p id="darkenText" class="toggle-text unselected">darken</p>
         </div>
+    </nav>
+    <div class="box">
+        <div id="echart-normal" style="width: 400px;height:400px;"></div>
+        <!--南丁格尔图-->
+        <div id="echart-nightingale" style="width: 400px;height:400px"></div>
+        <div id="echart-reverse" style="width: 400px;height:400px"></div>
     </div>
-</nav>
-<div class="box">
-    <div id="echart-normal" style="width: 400px;height:400px;"></div>
-    <!--南丁格尔图-->
-    <div id="echart-nightingale" style="width: 400px;height:400px"></div>
-    <div id="echart-reverse" style="width: 400px;height:400px"></div>
-</div>
-<div class="box">
-    <div id="echart-axis" style="width: 450px;height:400px;"></div>
-    <div id="echart-data" style="width: 450px;height:400px;"></div>
-</div>
-<div class="box bottom-box">
-	<div>
-        <h1>chart-line</h1>
-        <canvas id="Chart2" width="400" height="400"></canvas>
+    <div class="box">
+        <figure class="highcharts-figure">
+            <div id="hightChart"></div>
+        </figure>
+        <figure class="highcharts-figure">
+            <div id="container"></div>
+        </figure>
     </div>
-    <div>
-        <h1>chart-bar</h1>
-        <canvas id="myChart" width="400" height="400"></canvas>
+    <div class="box">
+        <div>
+            <canvas id="chart-bar" width="400" height="400"></canvas>
+        </div>
+        <div>
+            <canvas id="chart-line" width="400" height="400"></canvas>
+        </div>
+        <!-- <div>
+            <canvas id="chart-rRadar" width="400" height="400"></canvas>
+        </div> -->
+        <!-- shift + insert 粘贴 -->
     </div>
-	<div>
-        <h1>chart-polarArea</h1>
-        <canvas id="Chart4" width="400" height="400"></canvas>
+    <div class="box bottom-box">
+        <div id="echart-axis" style="width: 450px;height:400px;"></div>
+        <div id="echart-data" style="width: 450px;height:400px;"></div>
     </div>
-    <!-- shift + insert 粘贴 -->
-</div>
 
-<footer class="trademark" id="trademark">
-    <p>
-        <span>友情链接:</span>
-        <span><a href="http://chartjs.cn/">chartjs</a></span>
-        <span><a href="https://echarts.apache.org/zh/index.html">echarts</a></span>
-    </p>
-    <p><small>© 2021 Kart Jim, Inc.</small></p>
-</footer>
+    <footer class="trademark" id="trademark">
+        <p>
+            <span>友情链接:</span>
+            <span><a href="http://chartjs.cn/">chartjs</a></span>
+            <span><a href="https://echarts.apache.org/zh/index.html">echarts</a></span>
+            <span><a href="https://www.highcharts.com">highcharts</a></span>
+        </p>
+        <p><small>© 2021 Kart Jim, Inc.</small></p>
+    </footer>
 
-<script src="js/toggle.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-<script src="js/chart.js"></script>
+    <script src="js/toggle.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
-<script src="js/echarts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
+    <script src="js/echarts.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    <script src="js/chart.js"></script>
+
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+    <script src="https://code.highcharts.com/modules/boost.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
+    <script src="js/highcharts.js"></script>
+    <script src="js/hightchart2.js"></script>
 </body>
+
 </html>
