--- a/asset/test/index.html
+++ b/asset/test/index.html
@@ -1,35 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>取色器</title>
-    <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
+    <title>chart</title>
+    <!-- <link rel="stylesheet" href="hightchart.css"> -->
+    
 </head>
+
 <body>
-<div class="container">
-    <h1 class="title">Color Lighten/darken</h1>
-    <label for="hexoInput">Color (hex):</label>
-    <input type="text" name="hexoInput" placeholder="#a3c455" id="hexoInput" />
-
-    <div class="toggle">
-        <p id="lightenText" class="toggle-text">lighten</p>
-        <div id="toggleBtn" class="toggle-btn">
-            <div class="inner-circle"></div>
-        </div>
-        <p id="darkenText" class="toggle-text unselected">darken</p>
-    </div>
-
-    <label for="slider" id="sliderText" style="display: inline">0</label>%<br>
-    <input type="range" class="slider" min="0" max="100" value="0" name="slider" id="slider" />
-    <p>Input Color</p>
-    <div id="inputColor" class="box"></div>
-    <p id="alteredColorText">Altered Color: </p>
-    <div id="alteredColor" class="box"></div>
-    <input type="color" />
-</div>
-    <script src="index.js"></script>
+    <figure class="highcharts-figure">
+        <div id="container"></div>
+    </figure>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/boost.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
