--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chart</title>
-    <link rel="icon" href="asset//img/web-logo2.png">
+    <link rel="icon" href="asset/img/web-logo2.png">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/toggle.css">
@@ -17,7 +17,7 @@
 
 <body class="color-white" id="bd">
     <nav id="nav">
-        <div class="navbox">
+        <div class="nav-box">
             <h1 id="title">Marine Data</h1>
             <div class="toggle">
                 <p id="lightenText" class="toggle-text">lighten</p>
@@ -59,10 +59,21 @@
         <div id="echart-data" style="width: 450px;height:400px;"></div>
     </div>
 
+
+
+    <div class="linked box">
+        <div><a href="./asset/test/colorSelect/index.html" target="_blank">颜色选择器</a></div>
+        <div><a href="./asset/test/index.html" target="_blank">HighChart</a></div>
+        <div id="ael">addEventListener()</div>
+<!--        <div id="event">event</div>-->
+        <script src="js/index.js"></script>
+    </div>
+
+
     <footer class="trademark" id="trademark">
         <p>
             <span>友情链接:</span>
-            <span><a href="http://chartjs.cn/">chartjs</a></span>
+            <span><a href="http://chartjs.cn/">chart.js</a></span>
             <span><a href="https://echarts.apache.org/zh/index.html">echarts</a></span>
             <span><a href="https://www.highcharts.com">highcharts</a></span>
         </p>
