--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         <!-- <div>
             <canvas id="chart-rRadar" width="400" height="400"></canvas>
         </div> -->
-        <!-- shift + insert 粘贴 -->
+        <!-- 
+            shift + insert 粘贴
+            ctrl + insert  复制
+        -->
     </div>
     <div class="box bottom-box">
         <div id="echart-axis" style="width: 450px;height:400px;"></div>
