--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
             <span><a href="http://chartjs.cn/">chart.js</a></span>
             <span><a href="https://echarts.apache.org/zh/index.html">echarts</a></span>
             <span><a href="https://www.highcharts.com">highcharts</a></span>
+            <span><a href="http://42.193.131.94/#/">42.193.131.94</a></span>
         </p>
         <p><small>© 2021 Kart Jim, Inc.</small></p>
     </footer>
 
-    <script src="js/toggle.js"></script>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
     <script src="js/echarts.js"></script>
 
@@ -100,6 +100,8 @@
 
     <script src="js/highcharts.js"></script>
     <script src="js/hightchart2.js"></script>
+
+    <script src="js/toggle.js"></script>
 </body>
 
 </html>
