--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
         <div id="echart-data" style="width: 450px;height:400px;"></div>
     </div>
 
-
-
     <div class="linked box">
         <div><a href="./asset/test/colorSelect/index.html" target="_blank">颜色选择器</a></div>
         <div><a href="./asset/test/index.html" target="_blank">HighChart</a></div>
@@ -72,13 +70,13 @@
         <script src="js/index.js"></script>
     </div>
 
-
     <footer class="trademark" id="trademark">
         <p>
             <span>友情链接:</span>
             <span><a href="http://chartjs.cn/">chart.js</a></span>
             <span><a href="https://echarts.apache.org/zh/index.html">echarts</a></span>
             <span><a href="https://www.highcharts.com">highcharts</a></span>
+            <!-- <span><a href="">d3</a></span> -->
             <span><a href="http://42.193.131.94/#/">42.193.131.94</a></span>
         </p>
         <p><small>© 2021 Kart Jim, Inc.</small></p>
@@ -87,6 +85,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
     <script src="js/echarts.js"></script>
+    <script src='js/echart2-3.js'></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     <script src="js/chart.js"></script>
