基本配置，颜色重铸

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/toggle.css">
-    <link rel="stylesheet" href="css/click.css">
+    <link rel="stylesheet" href="css/color.css">
 </head>
 
 <body class="color-white" id="bd">
@@ -30,21 +30,14 @@
     <div class="box">
         <div id="echart-normal" style="width: 400px;height:400px;"></div>
         <div id="echart-nightingale" style="width: 400px;height:400px"></div>
-        <div id="echart-reverse" style="width: 400px;height:400px"></div>
-    </div>
-
-    <div class="box">
-        <div><canvas id="chart-bar" width="400" height="400"></canvas></div>
-
-        <div><canvas id="echart-line" width="400" height="400"></canvas></div>
-
-        <div><canvas id="chart-line" width="400" height="400"></canvas></div>
-        <!-- shift + insert 粘贴    ctrl + insert  复制-->
+        <div id="echart-line" style="width: 400px;height:400px"></div>
     </div>
 
     <div class="box bottom-box">
-        <div id="echart-axis" style="width: 450px;height:400px;"></div>
+        <div><canvas id="chart-bar" width="400" height="400"></canvas></div>
         <div id="echart-data" style="width: 450px;height:400px;"></div>
+        <div><canvas id="chart-line" width="400" height="400"></canvas></div>
+        <!-- shift + insert 粘贴    ctrl + insert  复制-->
     </div>
     <hr>
 
@@ -66,9 +59,8 @@
     <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
     <script src="js/echarts.js"></script>
     <script src="js/echart2.js"></script>
-    <script src='js/echart3.js'></script>
     <script src="js/echart-line.js"></script>
-    <script src="js/echart4.js"></script>
+
     <script src="js/echart5.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
