noto Sans 字体 江西拙楷2.0 字体

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/toggle.css">
     <link rel="stylesheet" href="css/color.css">
+    <!-- 字体引入 -->
+    <link href="https://fonts.font.im/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.font.im/css?family=Noto+Sans" rel="stylesheet">
 </head>
 
 <body class="color-white" id="bd">
