媒体查询适配手机端

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="color-white" id="bd">
     <nav id="nav">
         <div class="nav-box">
-            <h1 id="title">Marine Data</h1>
+            <h1 id="title" onClick="javascrtpt:window.location.href='./index.html'">Marine Data</h1>
             <div class="toggle">
                 <p id="lightenText" class="toggle-text">lighten</p>
                 <div id="toggleBtn" class="toggle-btn">
