--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </nav>
     <hr class="hr-top" />
-<section class="chart realtimeData">
+<section class="chart rtData">
     <h2>实时数据</h2>
     <div class="box">
         <div id="echart-nightingale" style="width: 400px;height:400px"></div>
@@ -38,7 +38,7 @@
         <div id="echart-line" style="width: 400px;height:400px"></div>
     </div>
 </section>
-<section class="chart statisticsData">
+<section class="chart stData">
     <h2>统计数据</h2>
     <div class="box">
         <!-- <div><canvas id="chart-bar" width="400" height="400"></canvas></div> -->
