--- a/index.html
+++ b/index.html
@@ -30,29 +30,34 @@
         </div>
     </nav>
     <hr class="hr-top" />
-<section class="chart rtData">
-    <h2>实时数据</h2>
-    <div class="box">
-        <div id="echart-nightingale" style="width: 400px;height:400px"></div>
-        <div id="echart-normal" style="width: 400px;height:400px;"></div>
-        <div id="echart-line" style="width: 400px;height:400px"></div>
-    </div>
-</section>
-<section class="chart stData">
-    <h2>统计数据</h2>
-    <div class="box">
-        <!-- <div><canvas id="chart-bar" width="400" height="400"></canvas></div> -->
-        <div id="echart-data" style="width: 600px;height:400px;"></div>
-        <!-- <div><canvas id="chart-line" width="400" height="400"></canvas></div> -->
-    </div>
-    <div class="box">
-        <div id="echart-lr" style="width: 600px;height:500px"></div>
-    </div>
-    <div class="box bottom-box">
-        <div id="echart-timeData" style="width: 600px;height:540px;"></div>
-    </div>
-</section>
-<hr class="hr-bottom" />
+    <section class="chart rtData">
+        <h2>实时数据</h2>
+        <div class="box">
+            <div id="echart-nightingale" style="width: 400px;height:400px"></div>
+            <div id="echart-normal" style="width: 400px;height:400px;"></div>
+            <div id="echart-line" style="width: 400px;height:400px"></div>
+        </div>
+        <div class="box">
+            <div id="echart-line4" style="width: 400px;height:400px"></div>
+            <div id="echart-line5" style="width: 400px;height:400px;"></div>
+            <div id="echart-line6" style="width: 400px;height:400px"></div>
+        </div>
+    </section>
+    <section class="chart stData">
+        <h2>统计数据</h2>
+        <div class="box">
+            <!-- <div><canvas id="chart-bar" width="400" height="400"></canvas></div> -->
+            <div id="echart-data" style="width: 600px;height:400px;"></div>
+            <!-- <div><canvas id="chart-line" width="400" height="400"></canvas></div> -->
+        </div>
+        <div class="box">
+            <div id="echart-lr" style="width: 600px;height:500px"></div>
+        </div>
+        <div class="box bottom-box">
+            <div id="echart-timeData" style="width: 600px;height:540px;"></div>
+        </div>
+    </section>
+    <hr class="hr-bottom" />
     <footer class="trademark" id="trademark">
         <p>
             <span>友情链接:</span>
@@ -74,6 +79,7 @@
     <script src="js/echart-line.js"></script>
     <script src="js/echart-lr.js"></script>
     <script src="js/echart4.js"></script>
+    <script src="js/echart4-6.js"></script>
 
     <script src="js/echart5.js"></script>
 
