--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="box">
-            <div id="echart-line4" style="width: 400px;height:400px"></div>
+            <div id="air-temperature" style="width: 400px;height:400px"></div>
             <div id="echart-nightingale" style="width: 400px;height:400px"></div>
             <div class="clock-box" id="clock">
                 <div class="clock">
@@ -84,15 +84,18 @@
     <section class="chart stData">
         <h2>统计数据</h2>
         <div class="box">
+            <div id="echart-all" style="width: 700px;height:500px;"></div>
+        </div>
+        <div class="box">
             <!-- <div><canvas id="chart-bar" width="400" height="400"></canvas></div> -->
-            <div id="echart-data" style="width: 600px;height:400px;"></div>
+            <div id="echart-data" style="width: 700px;height:400px;"></div>
             <!-- <div><canvas id="chart-line" width="400" height="400"></canvas></div> -->
         </div>
         <div class="box">
-            <div id="echart-lr" style="width: 600px;height:500px"></div>
+            <div id="echart-lr" style="width: 700px;height:500px"></div>
         </div>
         <div class="box bottom-box">
-            <div id="echart-timeData" style="width: 600px;height:540px;"></div>
+            <div id="echart-timeData" style="width: 700px;height:540px;"></div>
         </div>
     </section>
     <hr class="hr-bottom" />
@@ -117,7 +120,8 @@
     <script src="js/echart-line.js"></script>
     <script src="js/echart-lr.js"></script>
     <script src="js/echart4.js"></script>
-    <script src="js/echart4-6.js"></script>
+    <script src="js/echart-temp.js"></script>
+    <script src="js/echart-all.js"></script>
 
     <script src="js/echart5.js"></script>
 
