暂时子页面 + B站表情 + 动态时钟 + 时钟位置移动

--- a/index.html
+++ b/index.html
@@ -65,7 +65,26 @@
         <div class="box">
             <div id="air-temperature" style="width: 400px;height:400px"></div>
             <div id="echart-nightingale" style="width: 400px;height:400px"></div>
+        </div>
+    </section>
+    <section class="chart stData">
+        <h2>统计数据</h2>
+        <div class="box">
+            <div id="echart-all" style="width: 700px;height:500px;"></div>
+        </div>
+        <div class="box">
+            <!-- <div><canvas id="chart-bar" width="400" height="400"></canvas></div> -->
+            <div id="echart-data" style="width: 700px;height:500px;"></div>
+            <!-- <div><canvas id="chart-line" width="400" height="400"></canvas></div> -->
+        </div>
+        <div class="box">
+            <div id="echart-lr" style="width: 700px;height:500px"></div>
+        </div>
+        <div class="box">
             <div class="clock-box" id="clock">
+                <span class="lk1"></span>
+                <span class="lk2"></span>
+                <span class="lk3"></span>
                 <div class="clock">
                     <div class="hour">
                         <div class="hr" id="hr"></div>
@@ -80,30 +99,20 @@
             </div>
             <script src="js/clock.js"></script>
         </div>
-    </section>
-    <section class="chart stData">
-        <h2>统计数据</h2>
-        <div class="box">
-            <div id="echart-all" style="width: 700px;height:500px;"></div>
-        </div>
-        <div class="box">
-            <!-- <div><canvas id="chart-bar" width="400" height="400"></canvas></div> -->
-            <div id="echart-data" style="width: 700px;height:400px;"></div>
-            <!-- <div><canvas id="chart-line" width="400" height="400"></canvas></div> -->
-        </div>
-        <div class="box">
-            <div id="echart-lr" style="width: 700px;height:500px"></div>
-        </div>
         <div class="box bottom-box">
             <div id="echart-timeData" style="width: 700px;height:540px;"></div>
         </div>
     </section>
     <hr class="hr-bottom" />
+    <div class="emoji">
+        <img src="https://i0.hdslb.com/bfs/emote/431432c43da3ee5aab5b0e4f8931953e649e9975.png@112w_112h.webp" alt="ang">
+    </div>
     <footer class="trademark" id="trademark">
         <p>
             <span>友情链接:</span>
-            <span><a href="http://chartjs.cn/">chart.js</a></span>
-            <span><a href="https://echarts.apache.org/zh/index.html">echarts</a></span>
+            <!-- <span><a href="http://chartjs.cn/">chart.js</a></span> -->
+            <span><a href="./html/main.html" target="_blank">子页面</a></span>
+            <span><a href="https://echarts.apache.org/zh/index.html" target="_blank">echarts</a></span>
             <!-- <span><a href="https://www.highcharts.com">highcharts</a></span> -->
             <!-- <span><a href="">d3</a></span> -->
             <span><a href="http://42.193.131.94/#/">42.193.131.94</a></span>
