--- a/index.html
+++ b/index.html
@@ -161,6 +161,20 @@
                     </svg>
                 </a>
             </span>
+            <span>
+                <a href="./sub//card/index.html" target="_blank">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-quseqi"></use>
+                    </svg>
+                </a>
+            </span>
+            <span>
+                <a href="./sub/content/index.html" target="_blank">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-quseqi"></use>
+                    </svg>
+                </a>
+            </span>
         </p>
         <p><small>© 2021 Kart Jim, Inc.</small></p>
     </footer>
