--- a/sub/card/index.html
+++ b/sub/card/index.html
@@ -24,7 +24,7 @@
             <div class="content">content</div>
         </div>
         <div class="card4">
-            <div class="title">Thour</div>
+            <div class="title">Four</div>
             <div class="content">content</div>
         </div>
     </div>
