--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 字体引入 -->
     <link href="https://fonts.font.im/css?family=Noto+Sans" rel="stylesheet">
     <!-- iconfont -  -->
-    <script src="http://at.alicdn.com/t/font_2523255_yvmy1x95n2.js"></script>
+    <script src="http:////at.alicdn.com/t/font_2523255_scm7dd2wljd.js"></script>
     <style type="text/css">
         .icon {
             width: 1em; height: 1em;
@@ -162,16 +162,16 @@
                 </a>
             </span>
             <span>
-                <a href="./sub//card/index.html" target="_blank">
+                <a href="./sub/card/index.html" target="_blank">
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-quseqi"></use>
+                        <use xlink:href="#icon-card"></use>
                     </svg>
                 </a>
             </span>
             <span>
                 <a href="./sub/content/index.html" target="_blank">
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-quseqi"></use>
+                        <use xlink:href="#icon-zhengwen"></use>
                     </svg>
                 </a>
             </span>
