--- a/sub/content/index.html
+++ b/sub/content/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>content</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="content-box">
+        <div class="content">
+            <span class="lunkuo"></span>
+            <h1>ONE</h1>
+            <p>Content</p>
+        </div>
+    </div>
 </body>
 </html>
