--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 字体引入 -->
     <link href="https://fonts.font.im/css?family=Noto+Sans" rel="stylesheet">
     <!-- iconfont -  -->
-    <script src="http:////at.alicdn.com/t/font_2523255_scm7dd2wljd.js"></script>
+    <script src="http://at.alicdn.com/t/font_2523255_scm7dd2wljd.js"></script>
     <style type="text/css">
         .icon {
             width: 1em; height: 1em;
